# Cellify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  sonar-project.properties  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
assets/: README.md
demo/: README.md  app.js  index.html  styles.css  vite.config.js
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: getting-started.md  intro.md
docs-site/docs/api/: cell.md  (+3 more)
docs/decisions/: 001-technology-stack.md  002-minimal-dependencies.md  003-data-structures.md  004-accessibility.md  005-csv-format.md  006-xlsx-format.md  007-wasm-parser.md  README.md
examples/: README.md
examples/bun-test/: test.ts
scripts/: release.sh
src/: index.ts
src/accessibility/: helpers.ts  index.ts  types.ts
src/core/: Cell.ts  Sheet.ts  Workbook.ts  index.ts
src/formats/: csv.reader.ts  csv.types.ts  csv.writer.ts  index.ts
src/types/: cell.types.ts  event.types.ts  index.ts  range.types.ts  style.types.ts
tests/: accessibility.test.ts  cell.test.ts  copy-paste.test.ts  csv.test.ts  data-helpers.test.ts  events.test.ts  filtering.test.ts  row-column.test.ts  search.test.ts  sheet.test.ts  sorting.test.ts  types.test.ts  undo-redo.test.ts  workbook.test.ts  xlsx-import-coverage.test.ts  xlsx-reader-wasm.test.ts  xlsx-wasm.test.ts  xlsx.test.ts
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
(+34 files in other folders)
