[package]
name = "cellify-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Abdullah Mujahid Ali"]
description = "High-performance XLSX parser using WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.106"
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
# Note: quick-xml 0.38+ has breaking API changes, keeping at 0.31 for compatibility
quick-xml = "0.31"

# The `console_error_panic_hook` crate provides better debugging of panics
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
